Fixing firefox grid-gap

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -402,15 +402,15 @@ tr:last-child th {
 .grid {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  column-gap: 1rem;
-  row-gap: 1rem;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
   align-content: start;
 }
 
 @media (min-width: 900px) {
     .grid {
-        column-gap: 2rem;
-        row-gap: 2rem;
+        grid-column-gap: 2rem;
+        grid-row-gap: 2rem;
     }
 }
 
